--- a/sway/config
+++ b/sway/config
@@ -64,6 +64,7 @@ set $menu tofi-drun | xargs swaymsg exec --
 bindsym $mod+Return exec $term
 bindsym $mod+d exec $menu
 bindsym $mod+Shift+q kill
+bindsym $mod+Shift+m exec swaylock
 bindsym $mod+Shift+c reload
 bindsym $mod+Shift+e exec swaynag -t warning -m "Exit Sway?" -B "Yes, exit Sway" "swaymsg exit" --font="FiraCode-Bold 12"
 floating_modifier $mod normal
